--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,6 +3,7 @@
 		<title>Kitty World Domination</title>
 	</head>
 	<body>
+		test
 		{% for post in posts %}
 		<div>
 			<p>Published: {{post.published_date}}</p>
