Added view and template for detailed blog post

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,14 +1,10 @@
-<html>
-	<head>
-		<title>Kitty World Domination</title>
-	</head>
-	<body>
-		test
-		{% for post in posts %}
-		<div>
-			<p>Published: {{post.published_date}}</p>
-			<h1><a href="">{{post.title}}</a></h1>
-			<p>{{post.text|linebreaks}}</p>
-		{% endfor %}
-	</body>
-</html>
+{% extends 'blog/base.html' %}
+
+{% block content %}
+	{% for post in posts %}
+	<div class="post">
+		<p>Published: {{post.published_date}}</p>
+		<h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+		<p>{{post.text|linebreaks}}</p>
+	{% endfor %}
+{% endblock %}
