--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,6 +1,38 @@
 h1 a{
 	color:magenta;
+	font-size:24px;
+	line-height: 40px;
 }
-h1 a:hover{
-	background-color:aqua;
+.add-new{
+	position:absolute;
+	top:20px;
+	right:20px;
+	font-size:20px;
+	color:black;
+}
+.page-header{
+	background-color:orchid;
+	padding:20px;
+	margin:0;
+}
+
+.page-header h1{
+	width:100%;
+}
+.page-header h1 a{
+	color:black;
+}
+.page-header h1 a:hover{
+	background-color:rgba(0,0,0,0);
+}
+.post{
+	position:relative;
+	border-bottom:1px solid #eee;
+	padding:20px;
+}
+.post:hover{
+	background-color:#eee;
+}
+.container{
+	padding:0;
 }
