--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,8 +3,9 @@
 {% block content %}
 	{% for post in posts %}
 	<div class="post">
-		<p>Published: {{post.published_date}}</p>
 		<h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+		<p>Published: {{post.published_date}}</p>
 		<p>{{post.text|linebreaks}}</p>
+	</div>
 	{% endfor %}
 {% endblock %}
